tcc: Add REALCC makevar
tinycc can't compile all code (especially the 16bit startup
code), so some code needs to be compiled by something else,
so we need two CC variables.  I've chosen to add REALCC, defaulting
to $(CC), which is then used to compile most of the kernels code,
except some part where we override things.

So something like 'make REALCC="/path/to/tinycc/tcc -B/path/to/tinycc"'
switches to compile most stuff with tcc.

In similar vain, add CCLIB makevar to specify a compiler support
library.  That's helpful when trying to compile with an uninstalled
compiler.

--- a/arch/x86/boot/Makefile
+++ b/arch/x86/boot/Makefile
@@ -9,6 +9,7 @@
 # Changed by many, many contributors over the years.
 #
 
+override REALCC:=$(CC)
 KASAN_SANITIZE			:= n
 OBJECT_FILES_NON_STANDARD	:= y
 
