Don't use compression in bzImage
with some configs and scripts to compile the kernel
specially the time for compressing and relinking the
kernel is actually longer than for compiling itself.
This hacks out all compression, it directly embeds the
ELF image in bzImage.  It still has to move
around the parts at boot time because of the ELF header and
page tables, so it's a bit slower than necessary during
boot (but still faster than with compression).

--- a/arch/x86/boot/Makefile
+++ b/arch/x86/boot/Makefile
@@ -113,9 +113,13 @@ LDFLAGS_setup.elf	:= -T
 $(obj)/setup.elf: $(src)/setup.ld $(SETUP_OBJS) FORCE
 	$(call if_changed,ld)
 
-OBJCOPYFLAGS_setup.bin	:= -O binary
-$(obj)/setup.bin: $(obj)/setup.elf FORCE
-	$(call if_changed,objcopy)
+#OBJCOPYFLAGS_setup.bin	:= -O binary
+#$(obj)/setup.bin: $(obj)/setup.elf FORCE
+#	$(call if_changed,objcopy)
+
+LDFLAGS_setup.bin	:= --oformat binary -T
+$(obj)/setup.bin: $(src)/setup.ld $(SETUP_OBJS) FORCE
+	$(call if_changed,ld)
 
 $(obj)/compressed/vmlinux: FORCE
 	$(Q)$(MAKE) $(build)=$(obj)/compressed $@
